[package]
name = "cli_boilerplate_automation"
version = "0.0.1"
edition = "2024"
description = "Cli Boilerplate Automation: Opiniated Cli Utilities for Basic Tasks"
repository = "https://github.com/Squirreljetpack/cba"
license-file = "LICENSE"

[dependencies]
cfg-if = "1.0.4"
dirs = "6.0.0"
easy-ext = "1.0.2"
libc = "0.2.178"
log = "0.4.29"
thiserror = "2.0.17"
